--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VITE_API_URL = http://localhost:5000/api
+VITE_API_URL = https://travel-app-back-e58r.onrender.com/api
 
-VITE_API_URL_BASE = http://localhost:5000
+VITE_API_URL_BASE = https://travel-app-back-e58r.onrender.com
+
